# sqlite-parquet

./: .gitignore  Cargo.toml  Makefile  NOTES  README.md  docs.md  quack.sql  test.sql
.github/workflows/: test.yaml
benchmarks/: bench.sh  lookup.sh
src/: column_chunks.rs  lib.rs  meta.rs  metadata.rs  parquet.rs
tests/: generator.py  generator.sql  test-loadable.py
