[package]
name = "sqlite-parquet"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite3-loadable = {path="../rust-sqlite-exts/sqlite3-loadable"}
sqlite3ext-sys = {path="../rust-sqlite-exts/sqlite3ext-sys"}
parquet = {version="24.0.0", features=["json"]}
chrono = "0.4"
serde_json = "1.0.87"

[lib]
crate-type=["rlib", "cdylib"]
name = "parquet0"